# Alejandria

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  ANALISIS_CRITICIDAD_TLS.md  API_KEY_GENERATION_SUMMARY.md  API_KEY_MANAGEMENT.md  CERTIFICADOS_SEGURIDAD_DISTRIBUCION.md  CHANGELOG.md  CLAUDE_CODE_CONFIGURADO.md  CONTRIBUTING.md  CREAR_RELEASE.md  Cargo.toml  Dockerfile.cli  Dockerfile.mcp  GUIA_MIGRACION.md  INSTALACION_COMPLETA.md  INSTALACION_COMPLETA_TODOS_CLIENTES.md  INSTALADOR_ACTUALIZACION_HTTPS.md  INSTALADOR_V2_ACTUALIZADO.md  INSTALLER_V3_CHANGELOG.md  INSTALLER_V3_GUIDE.md  INSTALL_NOTE.md  LICENSE-APACHE  LICENSE-MIT  Makefile  OPENCODE_CONFIGURADO.md  P0-2_COMPLETION_REPORT.md  P0-3_CORS_IMPLEMENTATION.md  P0-3_QUICK_REFERENCE.md  P0-3_TEST_COMMANDS.sh  P0-5_BOLA_IMPLEMENTATION.md  P0-5_COMPLETION_REPORT.md  P0-5_IMPLEMENTATION_PROGRESS.md  QUICKSTART.md  README.md  RESUMEN_FINAL.md  SECURITY_REMEDIATION_PLAN.md  SESION_COMPLETADA_TLS_SECURITY_REVIEW.md  SESION_INSTALLER_GITLAB_API_FIX.md  (+11 more)
.atl/: skill-registry.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
.vtspec/: config.yaml  context.md
.vtspec/changes/http-sse-transport/: design.md  proposal.md  review.md  spec.md  state.yaml  tasks.md
certs/: README.md  ca-cert.pem  ca-cert.srl  server-cert.cnf  server-cert.pem  server-csr.pem
config/: decay_profiles.toml  default.toml  http.toml  stdio.toml
crates/alejandria-cli/: Cargo.toml
crates/alejandria-cli/src/: config.rs  main.rs
crates/alejandria-cli/src/commands/: admin.rs  consolidate.rs  decay.rs  embed.rs  export.rs  forget.rs  import.rs  memoir.rs  mod.rs  recall.rs  serve.rs  stats.rs  store.rs  topics.rs  tui.rs  update.rs
crates/alejandria-cli/tests/: cli_integration.rs
crates/alejandria-core/: Cargo.toml
crates/alejandria-core/src/: embedder.rs  error.rs  fastembed_embedder.rs  lib.rs  memoir.rs  memoir_store.rs  memory.rs  store.rs
crates/alejandria-core/src/decay/: config.rs  context_sensitive.rs  exponential.rs  importance_weighted.rs  mod.rs  spaced_repetition.rs  strategy.rs
crates/alejandria-core/src/import/: conflict.rs  mod.rs  validate.rs
crates/alejandria-mcp/: Cargo.toml
crates/alejandria-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/alejandria-mcp/src/middleware/: input_validation.rs  mod.rs  rate_limit.rs
crates/alejandria-mcp/src/tools/: memoir.rs  memory.rs
crates/alejandria-mcp/src/transport/: mod.rs  stdio.rs
crates/alejandria-mcp/src/transport/http/: auth.rs  connection.rs  handlers.rs  mod.rs  session.rs  sse.rs
crates/alejandria-mcp/tests/: memoir_tool_tests.rs  memory_tool_tests.rs  protocol_tests.rs
crates/alejandria-storage/: Cargo.toml
crates/alejandria-storage/benches/: performance.rs
crates/alejandria-storage/src/: api_keys.rs  encryption.rs  export.rs  import.rs  lib.rs  memoir_store.rs  migrations.rs  schema.rs  search.rs  store.rs
crates/alejandria-storage/src/migrations/: 004_api_keys.sql
crates/alejandria-storage/tests/: batch_operations.rs  bola_tests.rs  conflict_resolution.rs  crud_tests.rs  decay_tests.rs  export_import_roundtrip.rs  hybrid_search_tests.rs  memoir_tests.rs  search_tests.rs  security_tests.rs
deployment/: alejandria-http.service  nginx-alejandria.conf  nginx-snippets-alejandria-locations.conf
docs/: ACCEPTANCE.md  AGENT_INSTRUCTIONS.md  ALEJANDRIA_EXPLICACION.md  ARCHITECTURE.md  DEPLOYMENT.md  GUIDE.md  HTTP_SETUP.md  MIGRATIONS.md  PR_PROFILING.md  profiling.md
examples/: .gitignore  README.md  test_integration.sh
examples/claude-desktop/: README.md  claude_desktop_config.json.example
examples/go/: README.md  go.mod
examples/go/cmd/example_memoir/: main.go
examples/go/cmd/example_memory/: main.go
examples/go/pkg/client/: client.go
examples/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
examples/nodejs/src/: client.ts  exampleMemoir.ts  exampleMemory.ts
examples/python/: .env.example  README.md  client.py  example_memoir.py  example_memory.py  requirements.txt
examples/rust/: Cargo.toml  README.md
examples/rust/src/: client.rs  example_memoir.rs  example_memory.rs
scripts/: deploy-http.sh  deploy-remote.sh  diagnose-mcp.sh  generate-api-key.sh  install-mcp-v3.sh  install-mcp-v4.sh  install-mcp-v5.sh  install-mcp.sh  install.sh  migrate.py  setup-tls-autofirmado.sh  sync.sh  test-bola-protection.sh  test-docker.sh  test-installer-v4.sh  test-installer.sh  uninstall-mcp.sh  update-mcp-clients-https.sh  verify-deployment.sh
scripts/profiling/: compare-profiles.sh  profile-benchmarks.sh  profile-single.sh
skills/dev/commit-hygiene/: SKILL.md
skills/dev/memory-discipline/: SKILL.md
skills/dev/testing/: SKILL.md
skills/tui-quality/: SKILL.md
skills/using-alejandria/: SKILL.md
tools/: README.md  mem_consolidate.json  mem_embed_all.json  mem_forget.json  mem_health.json  mem_list_topics.json  mem_recall.json  mem_stats.json  mem_store.json  mem_update.json  memoir_add_concept.json  memoir_create.json  memoir_inspect.json  memoir_link.json  memoir_list.json  memoir_refine.json  memoir_search.json  memoir_search_all.json  memoir_show.json
