[package]
name = "alejandria-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "alejandria"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
alejandria-core = { path = "../alejandria-core" }
alejandria-storage = { path = "../alejandria-storage" }
alejandria-mcp = { path = "../alejandria-mcp" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# CLI-specific dependencies
clap = { workspace = true }
toml = { workspace = true }
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
