[package]
name = "alejandria-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "alejandria"
path = "src/main.rs"

[features]
default = []
http-transport = ["alejandria-mcp/http-transport"]
encryption = ["alejandria-storage/encryption"]

[dependencies]
# Workspace dependencies
alejandria-core = { path = "../alejandria-core" }
alejandria-storage = { path = "../alejandria-storage" }
alejandria-mcp = { path = "../alejandria-mcp" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# CLI-specific dependencies
clap = { workspace = true }
toml = { workspace = true }
anyhow = "1.0"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.10"

# TUI dependencies
ratatui = "0.26"
crossterm = "0.29"

# Security dependencies for backup operations
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
