[package]
name = "alejandria-storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["embeddings"]
embeddings = []

[dependencies]
alejandria-core = { path = "../alejandria-core" }

# SQLite with modern features
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }

# Vector search extension for embeddings
sqlite-vec = "0.1"

# ULID generation
ulid = "1.2"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# SHA-256 hashing for deduplication
sha2 = "0.10"

# CSV export support
csv = "1.3"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "performance"
harness = false
