[package]
name = "alejandria-storage"
version = "0.1.0"
edition = "2021"

[features]
default = ["embeddings"]
embeddings = []
encryption = ["rusqlite/bundled-sqlcipher"]

[dependencies]
alejandria-core = { path = "../alejandria-core" }

# SQLite with modern features
# SQLCipher encryption can be enabled with encryption feature
rusqlite = { version = "0.34", features = ["bundled", "modern_sqlite"] }

# Vector search extension for embeddings
sqlite-vec = "0.1"

# ULID generation
ulid = "1.2"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# SHA-256 hashing for deduplication
sha2 = "0.11"

# Hex encoding for encryption keys
hex = "0.4"

# PBKDF2 for key derivation (encryption feature)
pbkdf2 = { version = "0.12", default-features = false, features = ["simple"] }

# CSV export support
csv = "1.3"
rand = "0.10.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "performance"
harness = false
