[package]
name = "alejandria-rust-examples"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "example_memory"
path = "src/example_memory.rs"

[[bin]]
name = "example_memoir"
path = "src/example_memoir.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
